# AI-Resume-Optimizer-Telegram-Bot

./: .gitignore  README.md  agent.py  apply_handler.py  ats_checker.py  auto_apply.py  bot.py  job_fetcher.py  main.py  parser.py  profile_manager.py  prompts.py  pyproject.toml  requirements.txt  resume_pdf.py
