[project]
name = "resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fpdf>=1.7.2",
    "google-genai>=1.67.0",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
